--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 ################################################################################
 
 /ModelTool_CSharp/obj/Debug
+/ModelTool_CSharp/bin/Debug
 /.vs/ModelTool_CSharp/v16
