--- a/ModelTool_CSharp/App.config
+++ b/ModelTool_CSharp/App.config
@@ -1,6 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ModelTool_CSharp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <ModelTool_CSharp.Properties.Settings>
+            <setting name="IP" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Account" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Using" serializeAs="String">
+                <value>using System;</value>
+            </setting>
+            <setting name="Namespace" serializeAs="String">
+                <value>Model</value>
+            </setting>
+            <setting name="AccessModifier" serializeAs="String">
+                <value>public</value>
+            </setting>
+            <setting name="TabSpace" serializeAs="String">
+                <value>4</value>
+            </setting>
+            <setting name="UseSummary" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SaveLocation" serializeAs="String">
+                <value />
+            </setting>
+        </ModelTool_CSharp.Properties.Settings>
+    </userSettings>
 </configuration>
