--- a/ModelTool_CSharp/ModelTool_CSharp.csproj
+++ b/ModelTool_CSharp/ModelTool_CSharp.csproj
@@ -46,15 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColumnInfo.cs" />
     <Compile Include="Extend.cs" />
+    <Compile Include="GeneratingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GeneratingForm.Designer.cs">
+      <DependentUpon>GeneratingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelGenerator.cs" />
+    <Compile Include="ModelSetting.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQL.cs" />
+    <EmbeddedResource Include="GeneratingForm.resx">
+      <DependentUpon>GeneratingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
