--- a/ModelTool/ModelTool.csproj
+++ b/ModelTool/ModelTool.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Generator\Sql\MSSQLServerGenerator.cs" />
+    <Compile Include="Core\Generator\Sql\SqlGenerator.cs" />
     <Compile Include="Forms\ConnectForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,11 +71,13 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Core\ModelGenerator.cs" />
+    <Compile Include="Core\Generator\Model\ModelGenerator.cs" />
     <Compile Include="Model\ModelSetting.cs" />
+    <Compile Include="Model\SqlGeneratorSetting.cs" />
+    <Compile Include="Model\SqlType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\SQL.cs" />
+    <Compile Include="Core\Utility.cs" />
     <EmbeddedResource Include="Forms\ConnectForm.resx">
       <DependentUpon>ConnectForm.cs</DependentUpon>
     </EmbeddedResource>
