--- a/ModelTool/ModelTool.csproj
+++ b/ModelTool/ModelTool.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{691B630E-078E-4EA8-8400-F2E859BDB2DF}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ModelTool_CSharp</RootNamespace>
-    <AssemblyName>ModelTool_CSharp</AssemblyName>
+    <RootNamespace>ModelTool</RootNamespace>
+    <AssemblyName>ModelTool</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -95,6 +95,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
