--- a/ModelTool/App.config
+++ b/ModelTool/App.config
@@ -10,33 +10,42 @@
     </startup>
     <userSettings>
         <ModelTool.Properties.Settings>
-            <setting name="IP" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Account" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Using" serializeAs="String">
-                <value>using System;</value>
-            </setting>
-            <setting name="Namespace" serializeAs="String">
-                <value>Model</value>
-            </setting>
-            <setting name="AccessModifier" serializeAs="String">
-                <value>public</value>
-            </setting>
-            <setting name="TabSpace" serializeAs="String">
-                <value>4</value>
-            </setting>
-            <setting name="UseSummary" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SaveLocation" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="DataBaseTypeSelectedIndex" serializeAs="String">
-                <value>0</value>
-            </setting>
+			<setting name="DataBaseTypeSelectedIndex" serializeAs="String">
+				<value>0</value>
+			</setting>
+			<setting name="IsLocalhostIP" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="IP" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="SqlInstanceName" serializeAs="String">
+				<value>MSSQLSERVER</value>
+			</setting>
+			<setting name="Account" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="EnableSQLSugarDefaultSupport" serializeAs="String">
+				<value>False</value>
+			</setting>
+			<setting name="Using" serializeAs="String">
+				<value>using System;</value>
+			</setting>
+			<setting name="Namespace" serializeAs="String">
+				<value>Model</value>
+			</setting>
+			<setting name="AccessModifier" serializeAs="String">
+				<value>public</value>
+			</setting>
+			<setting name="TabSpace" serializeAs="String">
+				<value>4</value>
+			</setting>
+			<setting name="UseSummary" serializeAs="String">
+				<value>True</value>
+			</setting>
+			<setting name="SaveLocation" serializeAs="String">
+				<value />
+			</setting>
         </ModelTool.Properties.Settings>
     </userSettings>
   <runtime>
