--- a/ModelTool/Properties/Settings.settings
+++ b/ModelTool/Properties/Settings.settings
@@ -29,5 +29,14 @@
     <Setting Name="DataBaseTypeSelectedIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="SqlInstanceName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">MSSQLSERVER</Value>
+    </Setting>
+    <Setting Name="IsLocalhostIP" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="EnableSQLSugarDefaultSupport" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
